--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
-    "export": "next export"
   },
   "dependencies": {
     "next": "10.2.0",
